--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       height: 100vh;
       text-align: center;
       color: #23422f;
+      animation: fadePage 0.8s ease;
+    }
+
+    @keyframes fadePage {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     .card {
@@ -25,8 +31,13 @@
       border-radius: 18px;
       box-shadow: 0 10px 22px rgba(0,0,0,0.12);
       border-top: 6px solid #2f8c4a;
-      animation: fadeIn 0.7s ease;
+      animation: slideCard 0.8s ease;
       width: 360px;
+    }
+
+    @keyframes slideCard {
+      from { transform: translateY(25px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
 
     .logo {
@@ -56,32 +67,55 @@
       font-size: .9rem;
     }
 
+    /* CONTENEDOR DE BOTONES */
     .buttons {
       display:flex;
       flex-direction:column;
-      gap:14px;
+      gap:16px;
       margin-top:18px;
     }
 
+    /* BOTÓN BASE */
     button {
-      background-color:#661709;
       color:white;
       border:none;
       padding:12px 14px;
-      border-radius:10px;
+      border-radius:12px;
       cursor:pointer;
       font-weight:600;
       font-size:0.95rem;
-      transition:.1s ease;
+      transition: all .25s ease;
+      letter-spacing: .5px;
+      transform: scale(1);
     }
 
     button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+      transform: translateY(-3px) scale(1.03);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.18);
+      filter: brightness(1.07);
     }
 
-    button.secondary {
-      background:#25619c;
+    button:active {
+      transform: scale(0.97);
+      filter: brightness(.92);
+    }
+
+    /* COLORES DIFERENTES PERO MISMOS TONOS */
+    #btnCalificaciones {
+      background:#2f8c4a; /* Verde principal */
+    }
+
+    #btnControl {
+      background:#3fa85c; /* Verde medio */
+    }
+
+    #btnCalificacionesReales {
+      background:#4fba6c; /* Verde esmeralda */
+    }
+
+    /* Botón del modal */
+    .modal-btn {
+      background:#25619c !important;
     }
 
     .footer {
@@ -89,11 +123,7 @@
       bottom: 10px;
       font-size:.80rem;
       color:#44624a;
-    }
-
-    @keyframes fadeIn { 
-      from {opacity:0; transform:translateY(12px)} 
-      to {opacity:1; transform:none} 
+      animation: fadePage 1.4s ease;
     }
 
     /* Modal */
@@ -104,6 +134,7 @@
       background: rgba(0,0,0,0.35);
       align-items:center;
       justify-content:center;
+      animation: fadePage .3s ease;
     }
 
     .modal-content {
@@ -114,6 +145,7 @@
       text-align:center;
       box-shadow:0 8px 16px rgba(0,0,0,0.18);
       border-top:4px solid #25619c;
+      animation: slideCard .4s ease;
     }
 
     input[type=password] {
@@ -123,6 +155,13 @@
       margin-top:8px;
       border:1px solid #ccc;
       text-align:center;
+      transition:0.2s ease;
+    }
+
+    input[type=password]:focus {
+      border-color:#25619c;
+      box-shadow:0 0 5px rgba(37,97,156,0.35);
+      outline:none;
     }
   </style>
 </head>
@@ -139,17 +178,10 @@
 
     <div class="buttons">
       <button id="btnCalificaciones">📘 Ir a Calificaciones SAECH</button>
-      <button id="btnControl" class="secondary">🔒 Control de Trimestres</button>
 
-<button id="btnCalificacionesReales" class="secondary">📘 Calificaciones Reales</button>
+      <button id="btnControl">🔒 Control de Trimestres</button>
 
-<script>
-  const btnCalificacionesReales = document.getElementById("btnCalificacionesReales");
-  btnCalificacionesReales.addEventListener("click",()=>{
-    window.location.href = "calificaciones_reales.html";
-  });
-</script>
-
+      <button id="btnCalificacionesReales">📘 Calificaciones Reales</button>
     </div>
   </div>
 
@@ -161,7 +193,7 @@
       <input type="password" id="adminPassword" placeholder="Contraseña" />
 
       <div style="margin-top:12px;">
-        <button id="ingresarBtn" style="background:#25619c; padding:8px 12px; border-radius:8px;">Ingresar</button>
+        <button id="ingresarBtn" class="modal-btn" style="padding:8px 12px; border-radius:8px;">Ingresar</button>
         <button id="cancelBtn" style="background:none; color:#25619c; border:none; margin-left:8px;">Cancelar</button>
       </div>
     </div>
@@ -189,6 +221,7 @@
 
     const btnCalificaciones = document.getElementById("btnCalificaciones");
     const btnControl = document.getElementById("btnControl");
+    const btnCalificacionesReales = document.getElementById("btnCalificacionesReales");
 
     const modal = document.getElementById("passwordModal");
     const ingresarBtn = document.getElementById("ingresarBtn");
@@ -231,6 +264,10 @@
 
     cancelBtn.addEventListener("click", () => {
       modal.style.display = "none";
+    });
+
+    btnCalificacionesReales.addEventListener("click", () => {
+      window.location.href = "calificaciones_reales.html";
     });
   </script>
 
